force-app/main/default/objects/Software_Entitlement__c/Software_Entitlement__c.object-meta.xml
<CustomObject>
    <description>This object holds the software entitlements that correspond to records in Zentitle for software license management.</description>
    <label>Software Entitlement</label>
    <nameField>
        <displayFormat>Entitlement-{0000000}</displayFormat>
        <label>Software Entitlement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Software Entitlements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>