force-app/main/default/objects/Software_Entitlement__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This holds the entitlement account, it should not be changed once set because there can be issues with the customer in Zentile not matching.</description>
    <inlineHelpText>This is the account the Entitlement is connected to. The account CANNOT be changed once the entitlement is created.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Software Entitlements</relationshipLabel>
    <relationshipName>Software_Entitlements</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>