force-app/main/default/objects/Software_Entitlement__c/fields/Customer_Portal_URL__c.field-meta.xml
<CustomField>
    <fullName>Customer_Portal_URL__c</fullName>
    <description>This is the Customer Portal URL.</description>
    <formula>HYPERLINK(&quot;https://bacasystems.eup.zentitle.io/sign-in?customerId=&quot;+Account__r.Zentitle_Customer_ID__c, &quot;https://bacasystems.eup.zentitle.io/sign-in?customerId=&quot;+Account__r.Zentitle_Customer_ID__c)</formula>
    <inlineHelpText>This is the Customer Portal URL to provide customers to be able to log in.</inlineHelpText>
    <label>Customer Portal URL</label>
    <type>Text</type>
</CustomField>