force-app/main/default/objects/Software_Entitlement__c/fields/Entitlement_Seat_Count__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_Seat_Count__c</fullName>
    <description>This is the number of seats tied to the entitlement. This number is what would be changed to fire a change to Zentitle.</description>
    <inlineHelpText>This is the number of seats tied to the entitlement.</inlineHelpText>
    <label>Entitlement Seat Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>