force-app/main/default/objects/Software_Entitlement__c/fields/Entitlement_Type__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_Type__c</fullName>
    <description>This is used to support Entitlement bundles where multiple entitlements can be grouped to create an entitlement bundle stemming from a single offering. This is for future support.</description>
    <inlineHelpText>This is for future use with bundles. Currently, the option should be single to have a single entitlement.</inlineHelpText>
    <label>Entitlement Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Bundle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>