force-app/main/default/objects/Software_Entitlement__c/fields/Integration_Error_Occurred__c.field-meta.xml
<CustomField>
    <fullName>Integration_Error_Occurred__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This box will be marked as true when an integration error occurs and needs attention. This has to be manually unchecked when resolved.</description>
    <inlineHelpText>This box will be marked as true when an integration error occurs and needs attention.</inlineHelpText>
    <label>Integration Error Occurred</label>
    <type>Checkbox</type>
</CustomField>