force-app/main/default/objects/Software_Entitlement__c/fields/Maintenance_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Expiry_Date__c</fullName>
    <description>This is used to push into the &quot;maintenanceExpiryDate&quot; in Zentitle, and will set &quot;hasMaintenance&quot; to TRUE when populated and FALSE when blank/</description>
    <inlineHelpText>This field should be populated if there is a Maintenance Expiry that should be used for the software entitlement; if left blank, the Software Entitlement will be set not to have a Maintenance that expires.</inlineHelpText>
    <label>Maintenance Expiry Date</label>
    <type>DateTime</type>
</CustomField>