force-app/main/default/objects/Software_Entitlement__c/fields/Offering__c.field-meta.xml
<CustomField>
    <fullName>Offering__c</fullName>
    <description>This stores the SKU of the product for which the entitlement is offered. The SKU should not be changed once set.</description>
    <inlineHelpText>This is the SKU in zentile for the product being licensed. It should not be changed once set.</inlineHelpText>
    <label>SKU</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>