force-app/main/default/objects/Software_Entitlement__c/fields/Software_Activation_Code_List__c.field-meta.xml
<CustomField>
    <fullName>Software_Activation_Code_List__c</fullName>
    <description>This is a list of the first 10 activation codes. This is rolled up and populated by a Flow when a code is created or updated. This is used to be pulled and displayed on the contract master device related list through a formula.</description>
    <inlineHelpText>This is a list of the first 10 activation codes.</inlineHelpText>
    <label>Software Activation Code List</label>
    <type>TextArea</type>
</CustomField>