force-app/main/default/objects/Software_Entitlement__c/fields/Zentitle_Entitlement_Group_ID__c.field-meta.xml
<CustomField>
    <fullName>Zentitle_Entitlement_Group_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>This stores the entitlement group id, this will be populated for both single and bundles.</description>
    <externalId>true</externalId>
    <inlineHelpText>This is the external ID that correlates to the ID of the entitlement group stored in Zentitle.</inlineHelpText>
    <label>Zentitle Entitlement Group ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>