force-app/main/default/objects/Software_Entitlement__c/fields/Zentitle_Entitlement_ID__c.field-meta.xml
<CustomField>
    <fullName>Zentitle_Entitlement_ID__c</fullName>
    <description>This is the external ID that correlates to the ID stored in Zentitle.</description>
    <externalId>true</externalId>
    <inlineHelpText>This is the external ID that correlates to the ID stored in Zentitle.</inlineHelpText>
    <label>Zentitle Entitlement ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>