force-app/main/default/objects/Software_Entitlement__c/validationRules/Block_Changes_After_Creation.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_Changes_After_Creation</fullName>
    <active>true</active>
    <description>This blocks changes to the account and offering after creation which prevents errors from occurring.</description>
    <errorConditionFormula>AND(
ISCHANGED(Offering__c),
ISCHANGED(Account__c)
)</errorConditionFormula>
    <errorMessage>You cannot change the offering or the account ID after it has been set.</errorMessage>
</ValidationRule>